# rm_auto_aim

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  myThreads.h  test.csv
Configs/armour/: armour.yaml
Configs/camera/: MV-SUA133GC-T-Manifold.config  MV-SUA133GC.config  camera.yaml
Configs/detect/: detect.yaml  test.yaml
Configs/posture_calculating/: posture_calculating.yaml
configs/camera/: MV-SUA133GC-T_042003320218.Config
devices/: CMakeLists.txt
devices/camera/: mv_camera.cpp  mv_camera.hpp
devices/serial/: serial.cpp  serial.hpp
issues/: issues.md
modules/: CMakeLists.txt
modules/detect_armour/: detect.cpp  detect.hpp
modules/kalman_filter/: EKF.h  PredictorEKF.cpp  PredictorEKF.hpp  kalman.h
modules/number_classifier/: number_classifier.cpp  number_classifier.hpp
modules/posture_calculating/: README.md  posture_calculating.cpp  posture_calculating.hpp
test/: CMakeLists.txt  configs_test.cpp  create_mat.cpp  eigen_test.cpp  ekf_test.cpp  fmt_test.cpp  kf_test.cpp  serial_test.cpp  shoot_test.cpp  solvepnp_test.cpp  弹道模型.md
utils/: CMakeLists.txt  robot.hpp
utils/logger/: logger.cpp  logger.hpp
utils/timer/: timer.cpp  timer.hpp
